--- a/lib/adoptoposs_web/templates/landing_page/index.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.leex
@@ -22,7 +22,7 @@
         <img src="https://via.placeholder.com/250" class="mb-4 md:mb-6 rounded rounded-full h-48 md:h-auto">
         <p class="text-lg md:text-xl text-center">
           Searching for an additional maintainer? Or someone to take over your project?<br/>
-          Sumbit your repo.
+          Submit your repo.
         </p>
         <div></div>
       </div>
