--- a/lib/adoptoposs_web/templates/repo/repo.html.leex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.leex
@@ -4,8 +4,14 @@
       <%= render AdoptopossWeb.SharedView, "project_repo.html", project: @repo %>
     </div>
 
-    <div class="flex flex-col justify-center items-end md:flex-1 px-4 md:px-6 md:pt-6 md:pb-4 rounded-br rounded-bl md:rounded-bl-none md:rounded-tr <%= if @submitted || @to_be_submitted, do: "bg-gray-200", else: "bg-white" %>">
+    <div class="flex flex-row justify-end items-center md:flex-1 px-4 md:px-6 md:pt-6 md:pb-4 rounded-br rounded-bl md:rounded-bl-none md:rounded-tr <%= if @submitted || @to_be_submitted, do: "bg-gray-200", else: "bg-white" %>">
       <%= if @submitted do %>
+        <span class="text-gray-600 mr-4 md:mb-2">
+          Submitted to
+          <%= live_redirect "Your Projects",
+            to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ProjectLive.Index),
+            class: "text-gray-600 hover:text-gray-700 hover:underline" %>
+        </span>
         <span class="flex items-center justify-center h-12 w-12 md:h-16 md:w-16 my-4 md:mb-2 md:mt-0 rounded rounded-full border text-center text-green-700 bg-green-200">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="h-4 w-4 md:h-5 md:w-5 fill-current">
             <path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/>
