--- a/lib/adoptoposs_web/templates/landing_page/dashboard.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/dashboard.html.leex
@@ -2,10 +2,10 @@
   <h1>Your Dashboard</h1>
 
   <div>
-    <%= render AdoptopossWeb.LandingPageView, "recommendations.html", recommendations: [] %>
+    <%= render AdoptopossWeb.LandingPageView, "recommendations.html", assigns %>
   </div>
 
   <div class="mt-4 md:mt-6">
-    <%= render AdoptopossWeb.LandingPageView, "contacted.html", interests: @interests %>
+    <%= render AdoptopossWeb.LandingPageView, "contacted.html", assigns %>
   </div>
 </section>
