--- a/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
@@ -5,10 +5,31 @@
     <p class="text-lg md:text-2xl text-gray-600 text-center mb-4 md:mb-8">
       You don’t follow any programming languages yet.
     </p>
+
+    <%= if Enum.any?(@proposed_tags) do %>
+      <p>
+        We found that you might be interested in
+      </p>
+
+      <div class="flex flex-row flex-wrap justify-center items-center mb-4">
+        <%= for tag <- @proposed_tags do %>
+          <%= render AdoptopossWeb.SharedView, "language_tag.html",
+            name: tag.name,
+            color: tag.color,
+            class: "mr-2 mb-2 border-gray-400 text-base" %>
+        <% end %>
+      </div>
+    <% end %>
+
+    <%= submit "Follow all",
+      class: "px-4 py-2 mb-4 bg-white text-base rounded border border-red-300 leading-tight normal-case tracking-normal",
+      phx_click: "follow_proposed_tags",
+      phx_disable_with: "…" %>
+
     <p>
-      Add your favourite ones in
+      Follow your favourite languages in
       <%= live_redirect "your settings", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive) %>.</br>
-      Projects for your languages will appear here.
+      Related projects will appear here.
     </p>
   </div>
 <% else %>
