Fix missing @user_id in logged out landing page index

--- a/lib/adoptoposs_web/templates/landing_page/index.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.leex
@@ -63,7 +63,7 @@
         <%= live_component @socket, AdoptopossWeb.ProjectComponent,
             id: "project-#{project.id}",
             project: project,
-            user_id: @user_id %>
+            user_id: nil %>
       <% end %>
     </div>
   </section>
