--- a/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
@@ -22,7 +22,7 @@
     <% end %>
 
     <%= submit "Follow all",
-      class: "px-4 py-2 mb-4 bg-white text-base rounded border border-red-300 leading-tight normal-case tracking-normal",
+      class: "button-link mb-4",
       phx_click: "follow_proposed_tags",
       phx_disable_with: "…" %>
 
