--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -13,7 +13,7 @@
         </p>
         <%= link "Submit Repo",
             to: Routes.repo_path(AdoptopossWeb.Endpoint, :index),
-            class: "px-4 py-2 mb-4 text-base rounded border border-red-300 leading-tight" %>
+            class: "button-link mb-4" %>
         <p>
           Submitted Repos will appear here.
         </p>
