Fix recommendation filtering on landing page

--- a/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
@@ -21,7 +21,7 @@
       </div>
     <% end %>
 
-    <%= submit "Follow all",
+    <%= submit "Follow All",
       class: "button-link mb-4",
       phx_click: "follow_proposed_tags",
       phx_disable_with: "…" %>
