--- a/lib/adoptoposs_web/templates/shared/navigation.html.eex
+++ b/lib/adoptoposs_web/templates/shared/navigation.html.eex
@@ -1,7 +1,7 @@
 <nav role="navigation" class="flex flex-row flex-wrap justify-between items-center">
   <div class="flex items-center flex-shrink-0 mr-6">
     <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.LandingPageLive), class: "font-semibold text-xl tracking-tight" do %>
-      <img src="https://via.placeholder.com/40" alt="Adoptoposs" class="rounded-full"/>
+      <img src="<%= Routes.static_path(@conn, "/images/adoptoposs-logo.png")%>" alt="Adoptoposs" class="h-10"/>
     <% end %>
   </div>
 
