--- a/lib/adoptoposs_web/templates/settings/index.html.leex
+++ b/lib/adoptoposs_web/templates/settings/index.html.leex
@@ -3,7 +3,7 @@
 
   <div class="md:grid md:grid-flow-col md:grid-cols-2 md:gap-4">
     <div class="flex flex-col flex-wrap">
-      <h2>Languages you Follow</h2>
+      <h2>Languages You Follow</h2>
 
       <div id="tag-subscriptions" class="flex flex-row flex-wrap mt-4 md:mt-6">
         <%= if Enum.empty?(@tag_subscriptions) do %>
@@ -92,28 +92,16 @@
   <div class="mt-6">
     <h2>Notifications</h2>
 
-    <div>
-      <div class="mt-4 p-4 rounded bg-white border border-gray-300">
-        <h3 class="text-gray-800">
-          Project Messages
-        </h3>
-        <p>
-          Send me an email if a person is interested in one of my submitted projects and contacted me:
-        <p>
+    <%= render AdoptopossWeb.SettingsView, "settings_radio_panel.html",
+      settings: @settings,
+      key: :email_project_recommendations,
+      title: "Project Recommendations",
+      description: "Send me a regular email with interesting projects in my favourite languages:" %>
 
-        <%= f = form_for @settings, "#", [phx_change: "update_settings"] %>
-          <%= inputs_for f, :settings, fn fs -> %>
-            <%= for value <- Adoptoposs.Accounts.Settings.email_when_contacted_values() do %>
-              <div class="flex items-center rounded pl-4 mb-1 <%= if active?(@settings, :email_when_contacted, value), do: "bg-gray-200" %>">
-                <%= radio_button fs, :email_when_contacted, value, id: "email-when-contacted-#{value}" %>
-                <label for="email-when-contacted-<%= value %>" class="text-md p-4 w-full">
-                  <%= Gettext.gettext(AdoptopossWeb.Gettext, value) %>
-                </label>
-              </div>
-            <% end %>
-          <% end %>
-        </form>
-      </div>
-    </div>
+    <%= render AdoptopossWeb.SettingsView, "settings_radio_panel.html",
+      settings: @settings,
+      key: :email_when_contacted,
+      title: "Interests in My Project",
+      description: "Send me an email if a person is interested in one of my submitted projects and contacted me:" %>
   </div>
 </section>
