--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -25,10 +25,10 @@
     <%= for project <- @projects do %>
       <li id="project-<%= project.id %>" class="flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-400 rounded">
         <div class="flex flex-col md:flex-row md:justify-between w-full">
-          <div class="flex flex-col flex-1 items-start justify-between px-4 md:px-6  pt-4 pb-2 md:py-6 bg-white rounded-tl rounded-tr md:rounded-bl md:rounded-tr-none">
+          <div class="flex flex-col flex-1 items-start justify-between px-4 md:px-6 pt-4 pb-2 md:pt-6 md:pb-4 bg-white rounded-tl rounded-tr md:rounded-bl md:rounded-tr-none">
             <%= render AdoptopossWeb.SharedView, "project_repo.html", project: project %>
 
-            <div class="flex flex-row w-full mt-4 justify-end items-center">
+            <div class="flex flex-row w-full mt-2 justify-end items-center">
               <%= if @remove_id == to_string(project.id) do %>
                 <span class="text-red-500 mr-4 font-semibold leading-tight">
                   Are you sure?
