Improve landing page layout & content

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -252,6 +252,10 @@ a, button, input[type="button"] {
   width: max-content;
 }
 
+.text-hyphen {
+  hyphens: auto;
+}
+
 /* Reset some styles for markdown rendering, because the headlines
    and margins would be too large in the inline descriptions */
 .markdown {
