--- a/lib/adoptoposs_web/templates/shared/form.html.leex
+++ b/lib/adoptoposs_web/templates/shared/form.html.leex
@@ -6,9 +6,14 @@
     class: "bg-white text-gray-700  w-full h64 p-2 md:p-4 my-2 md:my-4 rounded",
     value: @message %>
 
-  <div class="flex justify-end">
-    <%= submit @submit_text, id: "btn-save-#{@id}", class: "mr-2" %>
+  <div class="flex justify-between items-center">
+    <div>
+      <%= error_tag f, assigns[:message_field] || :message , class: "pl-2 text-red-500" %>
+    </div>
 
-    <%= reset "Cancel", id: "btn-cancel-#{@id}", phx_click: @cancel_event, phx_target: @phx_target %>
+    <div>
+      <%= submit @submit_text, id: "btn-save-#{@id}", class: "mr-2" %>
+      <%= reset "Cancel", id: "btn-cancel-#{@id}", phx_click: @cancel_event, phx_target: @phx_target %>
+    </div>
   </div>
 </form>
