Remove markdown support for in-app user generated texts
Just for security reasons. And because it's not needed to display a text
with line breaks.

--- a/lib/adoptoposs_web/templates/interest/actions.html.leex
+++ b/lib/adoptoposs_web/templates/interest/actions.html.leex
@@ -11,9 +11,7 @@
       <% end %>
     </div>
 
-    <div class="markdown text-gray-700 my-2">
-      <%= {:safe, Earmark.as_html!(@project.description)} %>
-    </div>
+    <div class="whitespace-pre-wrap text-gray-700 my-2"><%= @project.description %></div>
   </div>
 
   <div class="flex flex-wrap flex-row justify-end">
