--- a/lib/adoptoposs_web/templates/email/project_recommendations.text.eex
+++ b/lib/adoptoposs_web/templates/email/project_recommendations.text.eex
@@ -3,19 +3,17 @@ Hi <%= @user.name %>,
 We’ve found some projects on Adoptoposs for which you might be interested in helping with their maintanance:
 
 <%= for {language_name, projects} <- Enum.group_by(@projects, & &1.language.name) do %>
-  <%= language_name %>
-
+<%= language_name %>
 =============================================
-    <%= for project <- projects do %>
-
-      <%= project.data["owner"]["login"] <> "/" <> project.name %>
-
+  <%= for project <- projects do %>
+    <%= project.data["owner"]["login"] <> "/" <> project.name %>
+    @<%= project.user.username %> is looking for:
       <%= project.data["description"] %>
 
-      <%= project.data["url"] %>
+    On Adoptoposs: <%= Routes.live_url(AdoptopossWeb.Endpoint, AdoptopossWeb.SearchLive, q: language_name <> " " <> String.downcase(project.name)) %>
+    <%= project.data["url"] %>
 
-    <% end %>
-
+  <% end %>
 Find more <%= language_name %> projects on Adoptoposs:
 <%= Routes.live_url(AdoptopossWeb.Endpoint, AdoptopossWeb.LandingPageLive, f: String.downcase(language_name)) %>
 
