Add a bit of space to the lower landing page text

--- a/lib/adoptoposs_web/templates/landing_page/index.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.leex
@@ -80,7 +80,7 @@
 </div>
 
 <div class="py-8 md:py-12">
-  <section class="text-lg md:text-xl">
+  <section class="text-lg md:text-xl md:mb-2">
     <h1 class="text-center text-pink-900">
       Why It Matters
     </h1>
@@ -115,7 +115,7 @@
 </div>
 
 <div class="py-8 md:py-12 pb-0">
-  <section class="text-lg md:text-xl">
+  <section class="text-lg md:text-xl pt-4 md:pt-6">
     <p>
       When a project gains popularity, original creators and maintainers will need help. Adoptoposs offers them a platform to find co-maintainers or put their projects up for adoption. It allows to make the initial contact between maintainers and future co-maintainers.
     </p>
